@@ -58,6 +58,7 @@ struct _Elm_Tooltip
      } rel_pos;
    Elm_Tooltip_Orient       orient; /** orientation for tooltip */
    double                   hide_timeout; /* from theme */
+   Eina_Bool                move_lock : 1; /* set/reset tooltip movement with respect to mouse pointer*/
    Eina_Bool                visible_lock:1;
    Eina_Bool                changed_style:1;
    Eina_Bool                free_size : 1;
@@ -156,13 +157,15 @@ _elm_tooltip_show(Elm_Tooltip *tt)
      (tt->eventarea, EVAS_CALLBACK_MOVE, _elm_tooltip_obj_move_cb, tt);
    evas_object_event_callback_add
      (tt->eventarea, EVAS_CALLBACK_RESIZE, _elm_tooltip_obj_resize_cb, tt);
-   //No movement of tooltip upon mouse move if orientation set
-   if ((tt->orient <= ELM_TOOLTIP_ORIENT_NONE) || (tt->orient >= ELM_TOOLTIP_ORIENT_LAST))
+   if (!tt->move_lock)
      {
-        evas_object_event_callback_add
-        (tt->eventarea, EVAS_CALLBACK_MOUSE_MOVE, (Evas_Object_Event_Cb)_elm_tooltip_obj_mouse_move_cb, tt);
+      //No movement of tooltip upon mouse move if orientation set
+      if ((tt->orient <= ELM_TOOLTIP_ORIENT_NONE) || (tt->orient >= ELM_TOOLTIP_ORIENT_LAST))
+        {
+           evas_object_event_callback_add
+           (tt->eventarea, EVAS_CALLBACK_MOUSE_MOVE, (Evas_Object_Event_Cb)_elm_tooltip_obj_mouse_move_cb, tt);
+        }
      }
-
    tt->changed_style = EINA_TRUE;
    _elm_tooltip_reconfigure_job_start(tt);
 }
@@ -721,6 +724,22 @@ _elm_tooltip_data_clean(Elm_Tooltip *tt)
 
    tt->data = NULL;
    tt->del_cb = NULL;
+}
+
+EAPI void
+elm_tooltip_move_lock_set(Evas_Object *obj, Eina_Bool lock)
+{
+   ELM_TOOLTIP_GET_OR_RETURN(tt, obj);
+
+   tt->move_lock = lock;
+}
+
+EAPI Eina_Bool
+elm_tooltip_move_lock_get(const Evas_Object *obj)
+{
+   ELM_TOOLTIP_GET_OR_RETURN(tt, obj, EINA_FALSE);
+
+   return tt->move_lock;
 }
 
 EAPI void
